--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,25 @@ html {
   color: #025464;
   font-weight: 300; }
 
+.results__defination {
+  margin-top: 2.4rem; }
+  .results__defination h2 {
+    font-size: 2.4rem;
+    font-weight: 500; }
+  .results__defination--verb {
+    margin-top: 2.6rem; }
+  .results__defination span {
+    display: block;
+    font-size: 1.8rem;
+    font-style: italic;
+    margin-bottom: 0.8rem; }
+  .results__defination--list {
+    margin-left: 2.4rem; }
+    .results__defination--list li {
+      font-size: 1.8rem;
+      font-weight: 300;
+      margin-bottom: 1.2rem; }
+
 .results__word-play--btn {
   padding: 1.6rem;
   border-radius: 50px;
@@ -111,3 +130,25 @@ html {
 hr {
   color: #979797;
   margin-top: 1.2rem; }
+
+.spinner {
+  display: grid;
+  place-items: center; }
+
+.custom-loader {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  border: 0.8rem solid;
+  border-color: #ccdde0;
+  border-right-color: #025464;
+  animation: s2 1s infinite linear; }
+
+@keyframes s2 {
+  to {
+    transform: rotate(1turn); } }
+
+footer {
+  margin-top: 2.4rem;
+  font-size: 2.4rem;
+  text-align: center; }
