--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -56,3 +56,32 @@ html {
     font-weight: 300;
   }
 }
+
+.results__defination {
+  margin-top: 2.4rem;
+  h2 {
+    font-size: 2.4rem;
+    font-weight: 500;
+  }
+
+  &--verb {
+    margin-top: 2.6rem;
+  }
+
+  span {
+    display: block;
+    font-size: 1.8rem;
+    font-style: italic;
+    margin-bottom: 0.8rem;
+  }
+
+  &--list {
+    margin-left: 2.4rem;
+
+    li {
+      font-size: 1.8rem;
+      font-weight: 300;
+      margin-bottom: 1.2rem;
+    }
+  }
+}
