--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,6 +21,32 @@ hr {
   margin-top: 1.2rem;
 }
 
+.spinner {
+  display: grid;
+  place-items: center;
+}
+
+.custom-loader {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  border: 0.8rem solid;
+  border-color: #ccdde0;
+  border-right-color: #025464;
+  animation: s2 1s infinite linear;
+}
+@keyframes s2 {
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+footer {
+  margin-top: 2.4rem;
+  font-size: 2.4rem;
+  text-align: center;
+}
+
 // - FONT SIZE SYSTEM (px)
 // 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
