--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -48,6 +48,7 @@ html {
   h1 {
     font-size: 6.2rem;
     font-weight: 600;
+    text-transform: capitalize;
   }
 
   p {
@@ -62,6 +63,7 @@ html {
   h2 {
     font-size: 2.4rem;
     font-weight: 500;
+    text-transform: capitalize;
   }
 
   &--verb {
@@ -81,7 +83,7 @@ html {
     li {
       font-size: 1.8rem;
       font-weight: 300;
-      margin-bottom: 1.2rem;
+      margin-bottom: 0.8rem;
     }
   }
 }
