--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -18,7 +18,7 @@
     }
 
     &::placeholder {
-      padding-left: 3rem;
+      // padding-left: 3rem;
       color: $secondary-color--light;
     }
   }
