--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,9 @@ Paragraph default:
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 */
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300&display=swap");
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
@@ -152,4 +154,5 @@ hr {
 footer {
   margin-top: 2.4rem;
   font-size: 2.4rem;
+  font-weight: 300;
   text-align: center; }
