--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,7 +28,9 @@ Paragraph default:
 
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300&display=swap");
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
