--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@ Paragraph default:
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  overflow: hidden; }
 
 body {
   font-family: "Kanit", sans-serif;
