--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,7 @@ Paragraph default:
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  overflow: hidden; }
+  box-sizing: border-box; }
 
 body {
   font-family: "Kanit", sans-serif;
