--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.spinner {
+  display: grid;
+  place-items: center;
+}
+
+.custom-loader {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  border: 0.8rem solid;
+  border-color: #ccdde0;
+  border-right-color: #025464;
+  animation: s2 1s infinite linear;
+}
+
+@keyframes s2 {
+  to {
+    transform: rotate(1turn);
+  }
+}
